[fix] 210529_壁に立てかけた棒.tex
fix graphics to show png file

--- a/Memo/stick_On_Bar/210529_壁に立てかけた棒.tex
+++ b/Memo/stick_On_Bar/210529_壁に立てかけた棒.tex
@@ -6,6 +6,7 @@
 \usepackage{bm}
 % 画像
 \usepackage[dvipdfmx]{graphicx}
+\usepackage[dvipdfmx]{color}
 \usepackage{siunitx}
 \usepackage{wrapfig}
 \usepackage{cases}
