[update] vGy_contri: sin cos at t=T/2

--- a/vGy_contri/main.tex
+++ b/vGy_contri/main.tex
@@ -390,6 +390,17 @@ $vy = -gt_h$
   \end{cases}
 \end{align}
 
+また、最下点に至る時刻は$t=\frac{T}{2}$で、その時に
+$y=-\frac{mg}{k} + \sqrt{\left(\frac{gt_h}{\omega}\right)^2 + \left(\frac{mg}{k}\right)^2}$
+かつ
+$\dot{y} = 0$
+より、
+\begin{align}
+  \cos \left( \omega \frac{T}{2} + A \right) & = 1
+  \\
+  \sin \left( \omega \frac{T}{2} + A \right) & = 0
+\end{align}
+
 \subsection{貢献}
 先に結論だけ書く。
 力積だと重力がいたずらに負に評価されて、
