[fix] vGy_contri: add dt to integral

--- a/vGy_contri/main.tex
+++ b/vGy_contri/main.tex
@@ -482,11 +482,11 @@ $\dot{y} = 0$
     = -k \Bigg\{
      & - \int_{0}^{T/2} \left(
     -\frac{mg}{k} + \sqrt{\left(\frac{gt_h}{\omega}\right)^2 + \left(\frac{mg}{k}\right)^2}\cos \left( \omega t + A \right)
-    \right)
+    \right) dt
     \\
      & + \int_{T/2}^{T} \left(
     -\frac{mg}{k} + \sqrt{\left(\frac{gt_h}{\omega}\right)^2 + \left(\frac{mg}{k}\right)^2}\cos \left( \omega t + A \right)
-    \right) \Bigg\}
+    \right) dt \Bigg\}
   \end{aligned}
   \\
    & \begin{aligned}
