[fix] 1seg_circle\main: _M -> -M

--- a/1seg_circle/main.tex
+++ b/1seg_circle/main.tex
@@ -339,7 +339,7 @@ $F_S$の正負は
 どちらかの方が十分に大きいという近似は、
 正であることを保証しない。
 大体正であるためには、
-$_ML\omega^2\cos\theta_S < 0$であるうちは
+$-ML\omega^2\cos\theta_S < 0$であるうちは
 $Mg\sin(\theta_W + \frac{1}{2}\pi) ( > 0 \because -\frac{1}{2}\pi < \theta_W < \frac{1}{2}\pi )$
 が大きい必要がある。
 
