[fix labeling] 1seg_circle\main

--- a/1seg_circle/main.tex
+++ b/1seg_circle/main.tex
@@ -308,9 +308,9 @@ $F_S$を決定する。
   \\
   \Leftrightarrow
   & 0= -Mg\cos\Theta_S - Ma_{arm}\cos\theta_S - \frac{I}{I_G}F_S\sin\theta_S
-  \label{eq:PB:FS_end}
+  \label{eq:PB:FS_middle}
 \end{align}
-式\ref{eq:PB:L_start},\ref{eq:PB:FS_end}を変形して
+式\ref{eq:PB:L_start},\ref{eq:PB:FS_middle}を変形して
 \begin{align}
   ML\omega^2 \cos\theta_S &= Mg\sin\Theta_S\cos\theta_S &+& Ma\sin\theta_S\cos\theta_S &- &F_S\cos^2\theta_S
   \\
