[add content] SinglePendulum_spin_vs_length\main
why maximal spin number by longer is bigger than that by shorter

--- a/SinglePendulum_spin_vs_length/main.tex
+++ b/SinglePendulum_spin_vs_length/main.tex
@@ -294,6 +294,29 @@ $\Omega$は式\ref{eq:Omega}により
 空中での回転速度$\Omega$
 が単調増加であることが示された。
 
+そして離軸後の最高到達点の高さ$h$は
+最も最下点での離軸した場合の$-l$、
+水平で離軸した場合の$0$の範囲内であるから、
+\begin{align}
+  -l \leq h \leq 0
+\end{align}
+であり、この範囲内の全ての実数値を実現できる。
+そしてこの範囲は長さ$l$が大きいほど大きく、
+\begin{align}
+  (l^S\textrm{の実現する範囲}) \subset (l^L\textrm{の実現する範囲})
+\end{align}
+が分かる。
+よって如何なるタイミングで長さ$l^S$の振り子が離軸しても、
+その最高到達点の高さと
+同じ最高到達点を持つ長さ$l^L$の振り子の離軸タイミングが存在し、
+その離軸タイミングでの
+長さ$l^L$の振り子の回転数は
+長さ$l^S$の振り子の回転数より大きい。
+よって長さ$l^S$の振り子の如何なる回転数に対しても
+それより大きい回転数が長さ$l^L$によって実現されることが分かるから、
+"単振り子は長いほうが高い回転数を実現する"ことが証明される。
+
+
 適当に着地点の高さを決め、滞空時間が完全に決定される状況にすると、
 離軸時の角度$\theta$、
 滞空時間$T_{air}$、
