[update] collision: add figure for ball freefall

--- a/collision_equation/collision_equation.tex
+++ b/collision_equation/collision_equation.tex
@@ -52,6 +52,13 @@ lineskip=-0.5ex
 まずは慣れ親しんだ衝突から
 加速度や力といった2階微分の物理量以外は衝突において無視してよいことを学ぶ。
 
+\begin{figure}[h]
+  \centering
+  \includegraphics[width = 0.6\textwidth]{ball_freefall.png}
+  \caption{衝突状況}
+  \label{ball_freefall.png}
+\end{figure}
+
 質点$m$が鉛直方向のみに運動し、
 地面に速度$v^b (b\text{はbeforeの意図})$ で衝突し、
 速度$v^a (a\text{はafterの意図})$で跳ね上がる場合を考える。
